Fixed Firefox bug where bottom horizontal line in description spanned too wide

--- a/scss/partials/common/_banner.scss
+++ b/scss/partials/common/_banner.scss
@@ -46,6 +46,7 @@
       margin         : 0 auto 0 0;
       padding        : 0 0 24px 0;
       width          : fit-content;
+      max-width      : max-content;  // Fixes bug in FireFox
       border-bottom  : 2px solid $secondary;
       font-size      : 1.25rem;
       font-weight    : 300;
